# LegoPixy

./: .gitignore  .pre-commit-config.yaml  EV3blockDet.py  LegoKinematics.py  LegoPixyCommunication.py  LegoPixySimulation.py  LegoSimFunctions.py  ParticleFilter.py  ParticleFilterSimulation.py  PixyFunctions.py  README.md  pyproject.toml
.github/workflows/: ci.yml
hardware/ev3/: ev3_block_det.py
scripts/: lego_pixy_simulation.py  particle_filter_simulation.py
src/legopixy/: __init__.py  constants.py  lego_kinematics.py  lego_pixy_communication.py  lego_sim_functions.py  particle_filter.py  pixy_functions.py  types.py
tests/: test_imports.py  test_lego_kinematics.py  test_pixy_functions.py
